# yew-app

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  output.css  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src/router/: index.rs  lib.rs  not_found.rs  router.rs
src/routes/: mod.rs  not_found.rs
