[workspace]
members = [
  "packages/app",
  "packages/entities",
  "packages/router", 
  "packages/services", 
  "packages/routes/*"]
default-members = ["packages/app"]
resolver = "2"

[workspace.dependencies]
gloo-storage = "0.2.2"
serde = {version="1.0.160", features = ["derive"]}
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
web-sys = "0.3.61"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true